# libneo

./: .clang-format  .gitignore  README.md  compile_flags.txt  demo.cpp  demo1.cpp  demo2.cpp  meson.build  test_attributes.cpp  test_point.cpp  test_space.cpp  test_term.cpp
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  test_linux.yml  test_macos.yml  test_windows.yml
include/neo/: config.hpp  dim2.hpp  neo.hpp  term.hpp  ui.hpp  uuid.hpp
include/neo/dim2/: object.hpp  point.hpp  space.hpp
include/neo/term/: ascii.hpp  attributes.hpp  buffer.hpp  button.hpp  chars.hpp  context.hpp  curses.hpp  field.hpp  frame.hpp  label.hpp  shape.hpp  style.hpp  types.hpp
include/neo/ui/: ascii.hpp  attributes.hpp  button.hpp  color.hpp  context.hpp  field.hpp  frame.hpp  handle.hpp  input.hpp  label.hpp  object.hpp  print.hpp  shape.hpp
src/: uuid.cpp
src/term/: buffer.cpp  common.cpp  context.cpp  style.cpp
src/ui/: ascii.cpp  input.cpp
subprojects/: gainput.wrap  pdcurses.wrap
